--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
   "name": "json-column-parser",
   "version": "1.0.0",
   "description": "JSON parser for several data sources columns",
-  "main": "index.ts",
+  "main": "src/index.ts",
   "scripts": {
-    "test": "jest"
+    "build": "cross-env NODE_ENV=production esbuild src/index.ts --bundle --platform=node",
+    "test:env": "cross-env NODE_ENV=production",
+    "test": "npm run test:env jest",
+    "test:coverage": "npm run test:env && jest --coverage",
+    "test:watch": "npm run test:env && jest --watch",
+    "test:lint": "npm run test:env && eslint . --ignore-path .gitignore",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix ."
   },
   "repository": {
     "type": "git",
@@ -12,9 +19,13 @@
   },
   "keywords": [
     "JSON",
+    "json",
+    "atlas",
     "parser",
     "column",
     "hive",
+    "presto",
+    "delta",
     "atlas",
     "amundsen"
   ],
@@ -25,8 +36,15 @@
   },
   "homepage": "https://github.com/StavPonte11/json-column-parser#readme",
   "devDependencies": {
+    "@types/jest": "^27.4.1",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
-    "eslint": "^8.10.0"
-  }
+    "cross-env": "^7.0.3",
+    "esbuild": "^0.14.25",
+    "eslint": "^8.10.0",
+    "jest": "^27.5.1",
+    "ts-jest": "^27.1.3",
+    "typescript": "^4.5.5"
+  },
+  "dependencies": {}
 }
