--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "src/index.ts",
   "scripts": {
     "build": "cross-env NODE_ENV=production esbuild src/index.ts --bundle --platform=node",
-    "test:env": "cross-env NODE_ENV=production",
-    "test": "npm run test:env jest",
-    "test:coverage": "npm run test:env && jest --coverage",
+    "test:env": "cross-env NODE_ENV=test",
+    "test": "npm run test:env && jest",
     "test:watch": "npm run test:env && jest --watch",
     "test:lint": "npm run test:env && eslint . --ignore-path .gitignore",
     "lint": "eslint .",
@@ -25,6 +24,7 @@
     "column",
     "hive",
     "presto",
+    "trino",
     "delta",
     "atlas",
     "amundsen"
@@ -36,9 +36,14 @@
   },
   "homepage": "https://github.com/StavPonte11/json-column-parser#readme",
   "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
     "@types/jest": "^27.4.1",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
+    "babel": "^6.23.0",
     "cross-env": "^7.0.3",
     "esbuild": "^0.14.25",
     "eslint": "^8.10.0",
@@ -46,5 +51,7 @@
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
   },
-  "dependencies": {}
+  "dependencies": {
+    "source-map-support": "^0.5.21"
+  }
 }
