--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "babel": "^6.23.0",
+    "babel-plugin-wildcard": "^7.0.0",
     "cross-env": "^7.0.3",
     "esbuild": "^0.14.25",
     "eslint": "^8.10.0",
