Fix:(package.json): add build as prepare script

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:lint": "npm run test:env && eslint . --ignore-path .gitignore",
     "lint": "eslint .",
     "lint:fix": "eslint --fix . --ignore-path .gitignore",
+	"prepare": "npm run build",
 	"prepublish": "npm run test && npm run lint:fix"
   },
   "repository": {
