--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "json-column-parser",
-  "version": "1.0.0",
-  "description": "JSON parser for several data sources columns",
-  "main": "src/index.js",
+  "version": "1.0.3",
+  "description": "JSON parser for several big data sources formatted columns",
+  "main": "lib/src/index.js",
+  "types": "lib/src/index.d.ts",
   "scripts": {
-    "build": "cross-env NODE_ENV=production esbuild src/index.js --bundle --platform=node --outfile=build.js",
+    "build": "cross-env NODE_ENV=production tsc",
     "test:env": "cross-env NODE_ENV=test",
     "test": "npm run test:env && jest",
     "test:watch": "npm run test:env && jest --watch",
